test/functions/vass/main-returns-type.good
main-returns-type.chpl:4: error: 'proc main' cannot return a 'type' or 'param'
